[statistics] Adds API to query multiple indicators in batch for cluster mode
