# doc/cluster_statistics_api_ref.swagger.yaml
@@ -385,6 +385,61 @@ paths:
           description: The description of statistics indicator.
           schema:
             $ref: '#/definitions/ClusterPipelineIndicatorDescription'
+  /{group}/pipelines/{pipelineName}/indicators/value:
+    get:
+      summary: Retrieves Pipeline Statistics Values From Multiple Indicators in a Group
+      description: |
+        The Pipeline Statistics Indicators Value retrieve endpoint in the group
+        returns the values of given multiple statistics indicators pipeline instance exposed.
+      parameters:
+        - name: group
+          in: path
+          required: true
+          type: string
+          description: Group name of cluster to query to query.
+        - name: pipelineName
+          in: path
+          description: Pipeline instance name to query.
+          required: true
+          type: string
+        - name: pipelineIndicatorsValueRetrieveRequest
+          in: body
+          schema:
+            $ref: '#/definitions/ClusterPipelineIndicatorsValueRetrieveRequest'
+          required: true
+          description: |
+            Timeout, the flag to present if returns the result of each cluster memeber and indicator names to query.
+      responses:
+        500:
+          description: Handle the reqeuest failed by internal error.
+          schema:
+            $ref: '#/definitions/Error'
+        503:
+          description: All operations are disallowed when running in standalone mode.
+          schema:
+            $ref: '#/definitions/Error'
+        400:
+          description: |
+            Invalid group name, timeout is less than 10s, invalid pipeline instance name or
+            invalid indicator names to query.
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: The statistics of pipeline instance not found by given name.
+          schema:
+            $ref: '#/definitions/Error'
+        408:
+          description: The timeout period expired.
+          schema:
+            $ref: '#/definitions/Error'
+        410:
+          description: The endpoint has gone.
+          schema:
+            $ref: '#/definitions/Error'
+        200:
+          description: The values of statistics indicators.
+          schema:
+            $ref: '#/definitions/ClusterPipelineIndicatorsValue'
   /{group}/pipelines/{pipelineName}/task/indicators:
     get:
       summary: Retrieves Task Statistics Indicator Names in a Group
@@ -572,7 +627,7 @@ definitions:
         type: integer
         minimum: 10
         maximum: 65535
-        default: 30
+        default: 120
       details:
         type: boolean
         default: false
@@ -680,6 +735,36 @@ definitions:
         description: |
           A human readable description of the special plugin indicator type.
           Check Pipeline Reference document for more information.
+  ClusterPipelineIndicatorsValueRetrieveRequest:
+    type: object
+    required:
+      - indicator_names
+    properties:
+      timeout_sec:
+        type: integer
+        minimum: 10
+        maximum: 65535
+        default: 120
+      details:
+        type: boolean
+        default: false
+      indicator_names:
+        type: array
+        items:
+          type: string
+          description: The name of the indicator to query statistics value.
+  ClusterPipelineIndicatorsValue:
+    type: object
+    required:
+      - values
+    properties:
+      values:
+        type: object
+        additionalProperties:
+          type: object
+          description: |
+            A special value object of the pipeline indicator type.
+            Check Pipeline Reference document for more information.
   ClusterTaskIndicatorNames:
     type: object
     required:
